# YOEO

./: .gitignore  LICENSE  README.md  detect.py  models.py  pth2pt_YOEO.py  pyproject.toml  requirements.txt  test.py  train.py
.github/ISSUE_TEMPLATE/: 1_bug_report.md
.github/workflows/: main.yml
class_config/: colored_robots.yaml  default.yaml
config/: 261.data  custom.data  yoeo-rev-0.cfg  yoeo-rev-1.cfg  yoeo-rev-10.cfg  yoeo-rev-11.cfg  yoeo-rev-2.cfg  yoeo-rev-3.cfg  yoeo-rev-4.cfg  yoeo-rev-5.cfg  yoeo-rev-6.cfg  yoeo-rev-7-anchor.cfg  yoeo-rev-7.cfg  yoeo-rev-8.cfg  yoeo-rev-9.cfg  yoeo-xl.cfg  yoeo.cfg  yoeo_light_decoder.cfg  yoeo_light_decoder_deconv.cfg  yoeo_medium_decoder_deconv.cfg  yoeo_medium_decoder_deconv_context.cfg  yolov3-tiny-custom.cfg
config/IR&onnx_for_416_Petr_1/: yoeo.mapping  yoeo.xml
config/IR&onnx_for_416_mine_759/: yoeo_mine_759.mapping  yoeo_mine_759.xml
config/ablation_cfg/: yoeo-rev-0.cfg  yoeo-rev-1.cfg  yoeo-rev-10.cfg  yoeo-rev-11.cfg  yoeo-rev-12.cfg  yoeo-rev-2.cfg  yoeo-rev-3.cfg  yoeo-rev-4.cfg  yoeo-rev-5.cfg  yoeo-rev-6.cfg  yoeo-rev-9.cfg
data/: TORSO.names  yoeo_names.yaml
data/custom/: train.txt
data/custom/labels/: 1028-img00671.txt  138-16_02_2018__12_01_43_0417_upper.txt
pytorchyolo/: detect.py  models.py  test.py  train.py
pytorchyolo/utils/: augmentations.py  datasets.py  loss.py  transforms.py
scripts/: README.md  convertONNXModelToOpenVinoIR.py  convertPyTorchModelToONNX.py  createYOEOLabelsFromTORSO-21.py  createYoeoLabels.py  createYoeoLabelsTORSO.py  download_weights.py  old_dataset_script.py
tezises/: inputs&outputs
utils/: augmentations.py  datasets.py  logger.py  transforms.py  utils.py
weights/: createYoeoLabels.py  download_weights.sh
yoeo/: detect.py  detectwebcam.py  detectwebcam_IR.py  detectwebcam_pt.py  models.py  models2pt.py  pth2pt.py  test.py  train.py
yoeo/detectwebcam_IR_cpp/: .CMakeCache.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detectwebcam_IR  detectwebcam_IR.cpp
yoeo/detectwebcam_IR_cpp/.CMakeFiles/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
yoeo/detectwebcam_IR_cpp/.CMakeFiles/detectwebcam_IR.dir/: compiler_depend.make  compiler_depend.ts  depend.make  detectwebcam_IR.cpp.o.d
yoeo/detectwebcam_IR_cpp/.CMakeFiles/format_reader.dir/: DependInfo.cmake  build.make  cmake_clean.cmake  compiler_depend.make  compiler_depend.ts  depend.make  flags.make  link.txt
yoeo/detectwebcam_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detectwebcam  detectwebcam.cpp
yoeo/scripts/: convertONNXModelToTVM.py  convertPyTorchModelToONNX.py  createYOEOLabelsFromTORSO-21.py  createYoeoLabelsTORSO.py  customizeCfg.py  openvino_demo.py
yoeo/utils/: augmentations.py  class_config.py  dataclasses.py  datasets.py  loss.py  metric.py  onnx.py  parse_config.py  sheduler.py  transforms.py  utils.py
