[tool.poetry]
name = "YOEO"
version = "1.2.0"
description = "A hybrid CNN for object detection and semantic segmentation"
authors = ["Florian Vahl <git@flova.de>", "Jan Gutsche <git@jagut.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.21.1"
torch = ">=1.10.1, <1.13.0"
torchvision = ">=0.8.2"
matplotlib = "^3.3.3"
tensorboard = "^2.11.0"
terminaltables = "^3.1.10"
Pillow = "^9.1.0"
tqdm = "^4.64.1"
imgaug = "^0.4.0"
torchsummary = "^1.5.1"
onnxruntime = "^1.9.0"
onnx = "^1.9.0"
onnxruntime-gpu = "^1.9.0"
onnx-simplifier = "^0.4.8"
PyYAML = "^6.0"
opencv-python = "^4.5.2"

[tool.poetry.dev-dependencies]
profilehooks = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yoeo-detect = "yoeo.detect:run"
yoeo-train = "yoeo.train:run"
yoeo-test = "yoeo.test:run"
